# QTCIDE

./: .gitignore  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  LICENSE.txt  MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h  ProjectManager.cpp  ProjectManager.h  README.md  SettingsDialog.cpp  SettingsDialog.h  Terminal.cpp  Terminal.h  WelcomeScreen.cpp  WelcomeScreen.h  main.cpp
